# Deep-Grasping-with-Aubo

./: README.md  darknet_ros.launch  passthrough.cpp  preprocess.py  single.launch  static_frame.launch  ur5.launch
my_aubo_i5_robot_config/: CMakeLists.txt  package.xml
my_aubo_i5_robot_config/config/: aubo_i5.srdf  chomp_planning.yaml  controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
my_aubo_i5_robot_config/launch/: aubo_i5_moveit_controller_manager.launch  aubo_i5_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  joystick_control.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch.xml
my_aubo_i5_robot_config/src/: pass_through.cpp  pick_place.cpp
